feat: LOFR sp